--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
                 <li><a href="#">Студия</a></li>
                 <li><a href="#">Портфолио</a></li>
                 <li><a href="#">Контакты</a></li>
-            </ul>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+            </ul>  
         </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
     <main>
         <!--Шапка-->
         <section>
-            <H1>Эффективные решения для вашего бизнеса</H1>
+            <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
         <!--Особенности-->
+        <h2>Наши преимущества</h2>
         <section>
             <ul>
                 <li>
@@ -92,7 +93,7 @@
         <a href="./index.html">WebStudio</a>
         <address>
             <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="http://surl.li/bkaxq" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
